@@ -633,7 +633,7 @@ void CGUIWindow::OnAction(const CAction &action)
   for (ivecControls i = m_vecControls.begin();i != m_vecControls.end(); ++i)
   {
     CGUIControl* pControl = *i;
-    if (pControl->HasFocus() )
+    if (pControl->HasFocus() && pControl->IsVisible())
     {
       pControl->OnAction(action);
       return ;
